# app/Http/Controllers/Api/Pais/PaisController.php
@@ -17,7 +17,36 @@ class PaisController extends Controller
      *      description="Retorna todos los paises",
      *      @OA\Response(
      *          response=200,
-     *          description="Successful operation"
+     *          description="Successful operation",
+    *         @OA\JsonContent(type="object",
+    *              @OA\Property(property="Pais", type="array",description="Listado de países",
+    *                  @OA\Items(type="object",
+    *                      @OA\Property(property="IDPais", type="integer",description="ID de País"),
+    *                      @OA\Property(property="Pais", type="string",description="Nombre de País"),
+    *                      @OA\Property(property="BaseFactura", type="integer",description="Monto para consumidor final"),
+    *                      @OA\Property(property="Cadenas", type="array",description="Cadenas pertenecientes al País",
+    *                           @OA\Items(type="object",
+    *                               @OA\Property(property="IDCadena", type="integer",description="ID de la Cadena"),
+    *                               @OA\Property(property="Cadena", type="string",description="Nombre de la Cadena"),
+    *                               @OA\Property(property="ServicioDomicilio", type="integer",description="Valor Servicio a Domicilio"),
+    *                           ),
+    *                      ),
+    *                      @OA\Property(property="Impuestos", type="array",description="Impuestos aplicados al País",
+    *                           @OA\Items(type="object",
+    *                               @OA\Property(property="IDImpuesto", type="string",description="ID del Impuesto"),
+    *                               @OA\Property(property="Descripcion", type="string",description="Descripción del Impuesto"),
+    *                               @OA\Property(property="Porcentaje", type="integer",description="Porcentaje del Impuesto"),
+    *                           ),
+    *                      ),
+    *                      @OA\Property(property="Ciudades", type="array",description="Ciudades del País",
+    *                           @OA\Items(type="object",
+    *                               @OA\Property(property="IDCiudad", type="integer",description="ID de la Ciudad"),
+    *                               @OA\Property(property="Ciudad", type="string",description="Nombre de la Ciudad"),
+    *                           ),
+    *                      ),
+    *                  ),
+    *              ),
+    *           ),
      *       ),
      *      @OA\Response(
      *          response=401,
@@ -32,5 +61,5 @@ class PaisController extends Controller
     public function index(){
         $pais = Pais::all();
         return  $pais;
-    }    
+    }
 }
